# storage/openapi.yaml
@@ -25,7 +25,14 @@ paths:
       operationId: app.get_checkin_info
       description: Gets check in info added after a timestamp
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
@@ -33,15 +40,15 @@ paths:
             format: date-time
             example: 2016-08-29T09:12:33.001Z
       responses:
-        "200":
+        '200':
           description: Successfully returned a list of check in events
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/checkIn"
-        "400":
+                  $ref: '#/components/schemas/checkIn'
+        '400':
           description: Invalid request
           content:
             application/json:
@@ -61,11 +68,11 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/checkIn"
+              $ref: '#/components/schemas/checkIn'
       responses:
-        "201":
+        '201':
           description: item created
-        "400":
+        '400':
           description: invalid input, object invalid
   /bookingConfirm:
     get:
@@ -75,7 +82,14 @@ paths:
       operationId: app.get_bookingConfirm_info
       description: Gets booking confirmation info added after a timestamp
       parameters:
-        - name: timestamp
+        - name: start_timestamp
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: string
+            format: date-time
+            example: 2016-08-29T09:12:33.001Z
+        - name: end_timestamp
           in: query
           description: Limits the number of items on a page
           schema:
@@ -83,15 +97,15 @@ paths:
             format: date-time
             example: 2016-08-29T09:12:33.001Z
       responses:
-        "200":
+        '200':
           description: Successfully returned a list of booking confirm events
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: "#/components/schemas/bookingConfirm"
-        "400":
+                  $ref: '#/components/schemas/bookingConfirm'
+        '400':
           description: Invalid request
           content:
             application/json:
@@ -111,11 +125,11 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/bookingConfirm"
+              $ref: '#/components/schemas/bookingConfirm'
       responses:
-        "201":
+        '201':
           description: item created
-        "400":
+        '400':
           description: invalid input, object invalid
 components:
   schemas:
